--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -44,7 +44,7 @@ _lustre:
       ipaddr1: "192.168.1.2"
       ipaddr2: "192.168.2.2"
   vms:
-    rk9: [ "rk9-freeipa", "rk94-node99", "rk94-node00", "rk94-node01", "rk94-node02", "rk94-node03", "rk94-node04", "rk94-node05", "rk94-node06", "rk94-node07", "rk94-node08", "rk94-node09", "rk94-node10", "ubt22-lfs" ] # 192.168.2.198
+    rk9: [ "rk9-freeipa", "rk94-node99", "rk94-node00", "rk94-node01", "rk94-node02", "rk94-node03", "rk94-node04", "rk94-node05", "rk94-node06", "rk94-node07", "rk94-node08", "rk94-node09", "rk94-node10", "co7-node01" ] # 192.168.2.71
     ubt24: [ "rk9-freeipa", "ubt24-node06", "ubt24-node07", "ubt24-node08", "ubt24-node09" ]
 
 
